# boss

./: .gitignore  .gitmodules  CMakeLists.txt  boss2.cpp  ompl_bow.cpp  wscript
cmake/: FindOMPL.cmake
include/: CboDirectedControlSampler.h  MotionPlanner.h  bo_param.h  boss_interface.h  boss_pch.h  collision_checker.h  math_utility.h  model.h  model_bak.h  param_manager2.h  pch.h  planner_interface.h
include/Koules/: KoulesConfig.h  KoulesProjection.h  KoulesStateSpace.h
include/boss/: Boss.h  bo_param.h  bo_traj_opt.h
include/cbo/: CboConfig.h
scripts/: boss.sh  obs_gen.py  output.csv  plot_boss2.py
src/: Boss.cpp  CboDirectedControlSampler.cpp  KoulesControlSpace.cpp  KoulesStateSpace.cpp  MotionPlanner.cpp
test/: cbo_param.yaml  env1.yaml  env2.yaml  plot_boss2.py  run.sh
